feat: intégration Supabase, refactoring seed services et migrations schema
- Ajout intégration Supabase (client REST, DTOs, configuration)
- Nouveau système de seed modulaire avec providers (CSV/Supabase)
- Migrations V20-V22: alignement schema draft + tables ingestion PR
- Suppression profils obsolètes (h2, local, fast-startup, minimal, test)
- Déplacement migrations seed vers db/migration-seed/
- Refactoring frontend: dashboard, teams, trades, leaderboard
- Nettoyage code mort et amélioration tests
- Documentation architecture et environnements

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>